fixed the flounderDropDown overlapping with the icon issue

--- a/src/FlounderDropdown/flounderDropdown.css
+++ b/src/FlounderDropdown/flounderDropdown.css
@@ -28,8 +28,7 @@
         .selectedDisplayed
         {
             height: 40px;
-            display: flex;
-            align-items: center;
+            line-height: 40px;
         }
 
         &:focus
@@ -392,7 +391,7 @@
 
         & > *
         {
-            margin-right:   4px;
+            margin-right:   3px;
             margin-bottom:  3px;
 
             &:last-child
@@ -415,11 +414,10 @@
         height:         var( --line-height-l );
 
         padding-left:   var( --spacing-2 );
+        padding-right:  var( --spacing-2 );
 
         background :    var( --PC-BLUE--L90 );
         color:          var( --PC-BLUE );
-
-        border-radius:  2px;
 
         @extend %Nessie-SemiBold;
         font-size:      var( --typo-3 );
@@ -439,11 +437,15 @@
         height:         var( --iconSize );
 
         margin-left:    var( --spacing-1 );
-        margin-right:    var( --spacing-1 );
 
-        background:     url( './images/close--blue.svg' ) no-repeat 100%;
+        background:     url( './images/close.svg' ) no-repeat 100%;
 
         cursor:         pointer;
+
+        &:hover
+        {
+            background-image:   url( './images/close--blue.svg' );
+        }
     }
 
     .loading,
